--- a/开发文档/0-开发环境准备.md
+++ b/开发文档/0-开发环境准备.md
@@ -1,10 +1,14 @@
 ## 代码编写环境
-代码编写用的是vscode，功能比较强，可以随时添加插件支持不同的语言高亮或测试环境等
+代码编写用的是vscode(前端)和idea(后端)。vscode功能比较强，可以随时添加插件支持不同的语言高亮或测试环境等；idea比较适合java的开发环境。
 
 ## github代码仓库
 为了把常用的工具串起来还打算用github来进行项目管理。
 
 首先构建项目仓库，项目名为yggycs-Blog，项目属性为公开(public)，添加一个README文件来交代一些环境信息。
+
+## 前后端分离说明
+为了更方便地进行项目管理，把前后端分成两个项目，通过外部链接的方式放到同一个项目文件yggycs-Blog中。然后初步的开发过程打算先后端再前端。
+
 
 ## 配置vscode-github开发环境
 将github开发集成进vscode，后续只要在vscode中进行项目管理和代码编写！这部分网上的教程其实很乱，之前一直没搞清楚，这次正好跑通然后记录一下。
@@ -22,3 +26,8 @@ ssh解决以后就可以开始将github与vscode连接起来了。
 首先在D盘中新建一个文件夹，就叫Repositories好了，然后进入这个文件夹，右键点击Git Bash Here。输入命令git init。然后先将新建的yggycs-Blog项目档到本地。输入命令git clone git@github.com:yggycs/yggycs-Blog.git，把项目档到本地，用vscode打开档下来的yggycs-Blog文件夹。然后在右侧源代码管理可以建立本地文件夹和仓库的关联。
 
 将开发文档文件夹加到yggycs-Blog里面。然后在vscode中尝试提交此次更改。然后就可以在github的项目里看到提交的开发文档文件夹了！到这里就完成了开发环境的配置，后续在这个文件夹中用vscode进行代码的编写，然后使用源代码管理就可以用github进行项目管理了！
+
+前端项目也用vscode作为ide，步骤类似，这里就不多赘述了。
+
+## 配置IDEA-github开发环境
+后端项目使用IDEA作为ide。
