更新开发文档

--- a/开发文档/0-开发环境准备.md
+++ b/开发文档/0-开发环境准备.md
@@ -31,3 +31,8 @@ ssh解决以后就可以开始将github与vscode连接起来了。
 
 ## 配置IDEA-github开发环境
 后端项目使用IDEA作为ide。
+
+首先配置一下idea内git的路径，File-Settings-Version Control-Git，输入合适的路径，点旁边的Test，如果能识别到git的版本信息应该就是成功了。Apply一下对应的修改结果。
+
+![图0-1](./figure/0-1.PNG)
+
