更新开发文档

--- a/开发文档/0-开发环境准备.md
+++ b/开发文档/0-开发环境准备.md
@@ -36,3 +36,8 @@ ssh解决以后就可以开始将github与vscode连接起来了。
 
 ![图0-1](./figure/0-1.PNG)
 
+接下来要绑定一下github的账号，File-Settings-Version Control-GitHub，在线登录github验证一下就行。
+
+打开IDEA的项目管理(version control)，发现报了一个错"fatal:detected dubious ownership in repository..."，按照错误提示把文件夹设置成信任的文件夹就可以了。
+
+修改完README.md文件后，文件会变蓝，同时项目管理(version control)中会显示修改的文件列表，commit后push即可。
