更新开发文档

--- a/开发文档/0-开发环境准备.md
+++ b/开发文档/0-开发环境准备.md
@@ -41,3 +41,18 @@ ssh解决以后就可以开始将github与vscode连接起来了。
 打开IDEA的项目管理(version control)，发现报了一个错"fatal:detected dubious ownership in repository..."，按照错误提示把文件夹设置成信任的文件夹就可以了。
 
 修改完README.md文件后，文件会变蓝，同时项目管理(version control)中会显示修改的文件列表，commit后push即可。
+
+## 外链github项目
+由于本项目是一个前后端分离的项目，前后端开发分别用了不同的IDE，为了方便开发和项目管理，把前端项目和后端项目单独拆分成了两个github子项目，再通过外链的方式集成到主项目yggycs-Blog中。此外，所有的开发文档都放在主项目yggycs-Blog中。
+
+1. 使用 submodule 创建一个名为 TARGET_FOLDER 的文件夹:
+
+   git submodule add git://github.com/[USERNAME]/[REPO_NAME].git [TARGET_FOLDER]
+
+2. 提交代码到 GitHub:
+ 
+   git commit -m "[UPDATE_MESSAGE]"
+
+外链github项目完成后，最终项目的框架如下图所示。
+
+![图0-2](./figure/0-2.PNG)
