更新开发文档

--- a/开发文档/1-一些项目开发设想.md
+++ b/开发文档/1-一些项目开发设想.md
@@ -1,7 +1,7 @@
 ## 技术目标
 希望能通过这个摸鱼项目走一趟前后端流程，多掌握一个网页设计的技能吧，技多不压身嘛，然后就用周末来所里摸鱼的时间搞搞，省得在家里摸鱼发烂发臭qaq。
 
-然后这个项目应该会是一个完整的前后端流程，会包括前端（基于vue，语言html+css+js），后端（mysql数据库和用go/java语言来开发），为了做成一个前后端的项目，应该会把功能做得花一点，然后预计开发时间是半年期，因为想要follow一下ysyx的第7期，后续会作为一个博客方便自己把笔记放到上面做分享或者做留存，然后可以后面在上面写写算法题思路、分享分享论文笔记啥的，甚至可以付费查看某些内容哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈（想屁吃）
+然后这个项目应该会是一个完整的前后端流程，会包括前端（基于vue，语言html+css+js），后端（mysql数据库和用go/java语言来开发），为了做成一个前后端的项目，应该会把功能做得花一点，然后预计开发时间是半年期，因为想要follow一下ysyx，后续会作为一个博客方便自己把笔记放到上面做分享或者做留存，然后可以后面在上面写写算法题思路、分享分享论文笔记啥的，甚至可以付费查看某些内容哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈（想屁吃）
 
 ## 网站构思（随做随改）
 包括一个登录逻辑！登陆类型应该有管理者（我！）、俺的朋友们（相当于vip用户！）还有普通用户。登陆只是一个强行加的功能，一般登录是为了有个账号能够留言或者评论，实际上有没有登录逻辑对于个人网站来说没啥太多的区别，然后为了防止攻击或者白嫖爬虫啥的，不登陆应该会限制评论、下载、查看完整文章等的功能
