--- a/开发文档/3_1-创建后端项目工程.md
+++ b/开发文档/3_1-创建后端项目工程.md
@@ -11,3 +11,8 @@
 基本操作如上一节所述，实际上这里省略一堆关于idea内maven版本配置、依赖版本配置、端口修改配置等一堆debug过程(递归debug)，成功跑起来了空项目，在浏览器中输入localhost:8082，可以看到如下图所示的提示信息。到这里就说明基本配置应该没问题了，下面需要逐步配置或者使用mybatis、mysql、h2、redis和写相关业务。
 
 ![图3-7](./figure/3-7.PNG)
+
+## 连接mysql数据库
+使用jdbc连接mysql数据库，在application.yml中配置数据库连接的相关信息，如下图所示。
+
+![图3-8](./figure/3-8.PNG)
