更新开发文档

--- a/开发文档/1-一些项目开发设想.md
+++ b/开发文档/1-一些项目开发设想.md
@@ -13,3 +13,8 @@
 留言板应该就很像qq空间那种，然后有空可以搞搞什么签到系统之类的，有不同铭牌的那种哈哈哈哈
 
 资料下载搞个导航之类的，这个后面再说
+
+## 首页构思
+(2023.10.23更新)因为要设计数据库了所以稍微具体化了一下前端的构思，简单画了一个首页的示意图。
+
+![图-首页](./figure/page_drift/首页.PNG)
