更新开发文档

--- a/开发文档/1-一些项目开发设想.md
+++ b/开发文档/1-一些项目开发设想.md
@@ -17,4 +17,4 @@
 ## 首页构思
 (2023.10.23更新)因为要设计数据库了所以稍微具体化了一下前端的构思，简单画了一个首页的示意图。
 
-![图-首页](./figure/page_drift/首页.PNG)
+![图-首页](./figure/page_drift/index.PNG)
