--- a/开发文档/3_2-数据库设计.md
+++ b/开发文档/3_2-数据库设计.md
@@ -193,8 +193,8 @@
 ```
 
 ## 数据库E-R图
-将建表语句导入draw.io，生成的ER图如下图所示。[ER图资源](./figure/ER图/ERpic.drawio)
+将建表语句导入draw.io，生成的ER图如下图所示。[ER图源文件](./figure/ER图/ERpic.drawio)
 
+![图-ER图](./figure/ER图/ERpic.drawio.png)
 
-
-## 数据库设计
+## 数据访问层DAO设计
