更新开发文档

--- a/开发文档/3_2-数据库设计.md
+++ b/开发文档/3_2-数据库设计.md
@@ -1,7 +1,7 @@
 ## 业务需求简介
 大概的业务需求看首页的设计基本上能够确定了，这个可能后面会迭代，但是大概不会大改。
 
-![图-首页](./figure/page_drift/首页.PNG)
+![图-首页](./figure/page_drift/index.png)
 
 目前能想到的业务有：用户登录、用户注册、用户评论、用户下载、用户浏览博客、用户留言等等，先根据这些信息来浅浅设计一下表。
 
