更新开发文档

--- a/开发文档/3_0-后端开发框架搭建.md
+++ b/开发文档/3_0-后端开发框架搭建.md
@@ -27,7 +27,7 @@ Docker是代码移植、部署工具，linux开发环境下使用较方便，所
 SpringBoot是一款后端框架，易于使用，代码帮助开发者自动装配，内嵌tomcat。
 
 ## Mybatis
-Mybatis是一个持久层框架
+Mybatis是一个持久层框架，官方参考文档链接指路：[mybatis官方中文文档](https://mybatis.org/mybatis-3/zh/index.html)。
 
 ## Mysql
 Mysql是一款简单的关系型数据库
