龟速学习前端知识中...

--- a/开发文档/2_0-前端开发框架搭建.md
+++ b/开发文档/2_0-前端开发框架搭建.md
@@ -1,8 +1,15 @@
 ## 写在前面(2023.12.15)
-经历了各种生病（冠子->细菌->甲流）、摸鱼（烘焙->塞尔达->尤克里里）终于又开始写博客网站了！后端开发并不是很顺利，所以打算先来学习一下前端，先把基本页面做出来。感觉前端应该会比后端容易上手点哈哈哈（springboot给我看拥了）。
+经历了各种生病（冠子->细菌->甲流）、摸鱼（烘焙->塞尔达->尤克里里）终于又开始写博客网站了！后端开发并不是很顺利，所以打算先来学习一下前端，先把基本页面做出来。感觉前端应该会比后端容易上手点哈哈哈（springboot 给我看拥了）。
 
 很希望自己在做cpu、玩树莓派、学操作系统等等摸鱼的过程中能有个平台记录一下流程，所以博客开发的进程得加快啦~希望能在2024年暑假之前摸鱼写完博客~
 
 ## 简介
-前端使用Vue框架，IDE使用vscode，对应的Github项目名称为Vue-yggycsBlog
+前端使用 Vue3 框架，IDE使用 vscode，对应的 Github 项目名称为 Vue-yggycsBlog
 
+## 前端开发进度
+- html 基础及 html5 新特性（√）
+- css 基础及 css3 新特性（√）
+- JavaScript 基础（√）
+- Vue3 学习（）
+- 前端需求分析（）
+- 代码编写（）
