更新前端开发进度

--- a/开发文档/2_0-前端开发框架搭建.md
+++ b/开发文档/2_0-前端开发框架搭建.md
@@ -10,6 +10,15 @@
 - html 基础及 html5 新特性（√）
 - css 基础及 css3 新特性（√）
 - JavaScript 基础（√）
-- Vue3 学习（）
-- 前端需求分析（）
-- 代码编写（）
+- Vue3 学习（√）
+    
+    基本有个印象，后面准备边做边学
+
+## Element plus
+组件库
+
+## Axios
+异步请求
+
+## Pinia
+状态管理
